src/shared-contracts/native/remote_support_native.h

typedef struct rs_runtime_t* rs_runtime_handle;
typedef struct rs_capture_t* rs_capture_handle;
typedef struct rs_renderer_t* rs_renderer_handle;
typedef enum rs_status_v1 {
  RS_STATUS_OK = 0,
  RS_STATUS_INVALID_ARGUMENT = 1,
  RS_STATUS_NOT_INITIALIZED = 2,
  RS_STATUS_ALREADY_INITIALIZED = 3,
  RS_STATUS_NOT_SUPPORTED = 4,
  RS_STATUS_ACCESS_DENIED = 5,
  RS_STATUS_TIMEOUT = 6,
  RS_STATUS_CANCELLED = 7,
  RS_STATUS_RESOURCE_EXHAUSTED = 8,
  RS_STATUS_DEVICE_LOST = 9,
  RS_STATUS_PROTOCOL_ERROR = 10,
  RS_STATUS_INVALID_STATE = 11,
  RS_STATUS_WOULD_BLOCK = 12,
  RS_STATUS_CLOSED = 13,
  RS_STATUS_BUFFER_TOO_SMALL = 14,
  RS_STATUS_INTERNAL_ERROR = 1000
} rs_status_v1;
typedef struct rs_runtime_options_v1 {
  uint32_t struct_size;
  uint32_t requested_abi_major;
  uint32_t requested_abi_minor;
  uint32_t flags;
  void* user_context;
} rs_runtime_options_v1;
typedef struct rs_capture_options_v1 {
  uint32_t struct_size;
  uint32_t target_fps;
  uint32_t max_width;
  uint32_t max_height;
  uint32_t flags;
  rs_string_view_v1 display_id_utf8;
  rs_capture_source_v1 source;
  rs_capture_target_kind_v1 target_kind;
  uint32_t frame_queue_capacity;
  uint32_t acquire_timeout_ms;
} rs_capture_options_v1;
typedef struct rs_cursor_info_v1 {
  uint32_t struct_size;
  uint64_t frame_id;
  uint64_t display_generation;
  uint64_t shape_id;
  int32_t desktop_x;
  int32_t desktop_y;
  int32_t hotspot_x;
  int32_t hotspot_y;
  uint32_t visible;
  rs_cursor_shape_v1 shape_kind;
  uint32_t width;
  uint32_t height;
  uint32_t pitch_bytes;
  rs_byte_view_v1 bgra8_premultiplied;
} rs_cursor_info_v1;
typedef struct rs_frame_info_v1 {
  uint32_t struct_size;
  uint64_t frame_id;
  uint64_t monotonic_timestamp_ns;
  uint32_t width;
  uint32_t height;
  uint32_t rotation_degrees;
  rs_pixel_format_v1 pixel_format;
  uint64_t display_generation;
  uint32_t color_primaries;
  uint32_t transfer_characteristics;
  uint32_t matrix_coefficients;
  void* d3d11_texture; /* Borrowed ID3D11Texture2D*. Valid only during callback/call. */
  int32_t desktop_origin_x;
  int32_t desktop_origin_y;
} rs_frame_info_v1;
typedef struct rs_renderer_options_v1 {
  uint32_t struct_size;
  uintptr_t target_hwnd;
  rs_renderer_view_mode_v1 view_mode;
  uint32_t flags;
} rs_renderer_options_v1;
typedef void (RS_CALL *rs_display_info_callback_v1)(void* user_context, const rs_display_info_v1* display);
typedef struct rs_callbacks_v1 {
  uint32_t struct_size;
  void* user_context;
  rs_log_callback_v1 on_log;
  rs_frame_callback_v1 on_capture_frame;
  rs_encoded_frame_callback_v1 on_encoded_frame;
  rs_frame_callback_v1 on_remote_video_frame;
  rs_error_callback_v1 on_error;
  rs_transport_state_callback_v1 on_transport_state;
  rs_local_description_callback_v1 on_local_description;
  rs_local_ice_candidate_callback_v1 on_local_ice_candidate;
  rs_data_channel_state_callback_v1 on_data_channel_state;
  rs_data_message_callback_v1 on_data_message;
  rs_buffered_amount_low_callback_v1 on_buffered_amount_low;
  rs_cursor_callback_v1 on_cursor;
  rs_frame_callback_v1 on_decoded_frame;
  rs_encoder_fallback_callback_v1 on_encoder_fallback;
} rs_callbacks_v1;
RS_API rs_status_v1 RS_CALL rs_runtime_create(const rs_runtime_options_v1* options, const rs_callbacks_v1* callbacks, rs_runtime_handle* out_runtime);
RS_API void RS_CALL rs_runtime_destroy(rs_runtime_handle runtime);
RS_API rs_status_v1 RS_CALL rs_runtime_enumerate_displays(rs_runtime_handle runtime, rs_display_info_callback_v1 callback, void* callback_context);
RS_API rs_status_v1 RS_CALL rs_capture_create(rs_runtime_handle runtime, const rs_capture_options_v1* options, rs_capture_handle* out_capture);
RS_API rs_status_v1 RS_CALL rs_capture_start(rs_capture_handle capture);
RS_API rs_status_v1 RS_CALL rs_capture_stop(rs_capture_handle capture);
RS_API void RS_CALL rs_capture_destroy(rs_capture_handle capture);
RS_API rs_status_v1 RS_CALL rs_renderer_create(rs_runtime_handle runtime, const rs_renderer_options_v1* options, rs_renderer_handle* out_renderer);
RS_API rs_status_v1 RS_CALL rs_renderer_submit_d3d11_frame(rs_renderer_handle renderer, const rs_frame_info_v1* frame);
RS_API rs_status_v1 RS_CALL rs_renderer_submit_cursor(rs_renderer_handle renderer, const rs_cursor_info_v1* cursor);
RS_API rs_status_v1 RS_CALL rs_renderer_resize(rs_renderer_handle renderer, uint32_t pixel_width, uint32_t pixel_height);
RS_API void RS_CALL rs_renderer_destroy(rs_renderer_handle renderer);